code/force-app/main/default/objects/Social_Risk_Event__c/Social_Risk_Event__c.object-meta.xml
<CustomObject>
    <label>社會風險事件</label>
    <nameField>
        <label>處分字號</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>