code/force-app/main/default/objects/Social_Risk_Event__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Account__r.Owner.Employee_No__c</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>