code/force-app/main/default/objects/Social_Risk_Event__c/fields/Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Date__c</fullName>
    <label>公告日期</label>
    <type>Date</type>
</CustomField>