code/force-app/main/default/objects/Social_Risk_Event__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>公司名稱</label>
    <length>100</length>
    <type>Text</type>
</CustomField>