code/force-app/main/default/objects/Social_Risk_Event__c/fields/Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Date__c</fullName>
    <label>處分日期</label>
    <type>Date</type>
</CustomField>