code/force-app/main/default/objects/Social_Risk_Event__c/fields/Penalty_Reason__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Reason__c</fullName>
    <label>裁處理由</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>