code/force-app/main/default/objects/Social_Risk_Event__c/fields/Person_In_Charge__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge__c</fullName>
    <label>負責人</label>
    <length>200</length>
    <type>Text</type>
</CustomField>