code/force-app/main/default/objects/Social_Risk_Event__c/fields/Social_Risk_Event_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Social_Risk_Event_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>社會風險事件外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>