code/force-app/main/default/objects/Social_Risk_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Announcement_Date__c</columns>
    <columns>Disposition_Date__c</columns>
    <columns>Person_In_Charge__c</columns>
    <columns>Legal_Provision__c</columns>
    <columns>Penalty_Reason__c</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>